# AoC2024

./: .clang-format  CMakeLists.txt  README.md
day1/: CMakeLists.txt  main.cpp
include/: common.h
src/: common.cpp  main.cpp
